Fixed scrollbar ui bug

--- a/style.css
+++ b/style.css
@@ -4,9 +4,19 @@
       padding: 0;
       margin: 0;
       overflow-x: hidden;
-      overflow-y: auto;
-      height: 100%;
+      scrollbar-width: none;
+      -ms-overflow-style: none;
     }
+
+    html::-webkit-scrollbar,
+    body::-webkit-scrollbar {
+      display: none;
+    }
+
+    html {
+      scroll-behavior: smooth;
+    }
+
 
     .reveal {
       visibility: hidden;
